TQT-47 fixed handling for empty form param values